@startuml

abstract class Car{
    + Brand : string
    + Model : string
    + Problem : string
    
    +{abstract} Repair(): void
}

class Engine {

 +Car(brand: string, model: string, problem: string)
 +Repair(): void
}

class Transmission {

 +Car(brand: string, model: string, problem: string)
 +Repair(): void
}

Car <|-- Engine
Car <|-- Transmission
@enduml